--- a/packages/docs/src/lang/en/vuetify/AppToolbar.json
+++ b/packages/docs/src/lang/en/vuetify/AppToolbar.json
@@ -12,6 +12,7 @@
   "directives": "Directives",
   "documentation": "Documentation",
   "ecosystem": "Ecosystem",
+  "enterprise": "Enterprise",
   "eslint": "Eslint config",
   "facebook": "Facebook",
   "framework": "Framework",
@@ -29,6 +30,7 @@
   "reddit": "Reddit",
   "releases": "Releases",
   "social": "Social",
+  "sponsor": "Sponsor",
   "stack": "Stack overflow",
   "store": "Store",
   "support": "Support",
